--- a/node/package.json
+++ b/node/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "g-user-node",
+  "version": "1.0.0",
+  "description": "Gestor de Usuarios",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "@douglucio",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -6,8 +16,5 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1"
-  },
-  "scripts": {
-    "start": "node index.js"
-}
+  }
 }
